# IgnisCAD

./: .gitignore  404.html  CONTRIBUTING.md  IgnisCAD.py  LICENSE  README.md  TESTING.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml  publish.yml
api/: index.html
docs/: api.md
search/: search_index.json
src/igniscad/: __init__.py  _err_handler.py  _logger_handler.py  containers.py  core.py  igniscad.py  main.py  mixins.py  primitives.py  primitives_2d.py  selectors.py  visualization.py
src/igniscad/helpers/: __init__.py  constants.py  exceptions.py  validator.py
src/test/: primitives_test.py  primitives_test_2d.py  test.py
tests/: test_containers_registry.py  test_export.py  test_joints.py  test_primitives_and_ops.py  test_selectors.py
